--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <title>AnimalHealthPredictionAngular</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <meta name="color-scheme" content="dark">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
